Adicionei classes main pra testar a conversa com o Banco. Detalhes da conexão estao no file db.properties

--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=root
-password=
-dburl=jdbc:mysql://localhost:3306/empresa?useTimezone=true&serverTimezone=UTC
+password=iftm1234
+dburl=jdbc:mysql://cluster01.c1pou0akhdto.us-east-1.rds.amazonaws.com:3306/leilao_quadrinhos
 useSSL=false
